<resources>
    <!-- <string name="themoviedb_api_Key">FILL_THE_KEY</string> -->

    <string name="app_name" translatable="false">PopularMovies</string>
    <string name="title_label">Title</string>
    <string name="release_date_label">Release date</string>
    <string name="vote_label">Votes</string>
    <string name="plot_synopsis_label">Plot synopsis</string>
    <string name="detail_error_message">Movie data not available</string>
    <string name="poster_iv_content_description">Movie poster</string>
    <string name="poster_description_prefix">Movie poster of</string>
    <string name="no_internet_error_message">No internet connection! Displaying only favorites movies.</string>
    <string name="trailers_label">Trailers</string>
    <string name="reviews_label">Reviews</string>
    <string name="review_by">Review by</string>
    <item name="image_base_url" type="string">http://image.tmdb.org/t/p/w185</item>
    <item name="image_big_url" type="string">http://image.tmdb.org/t/p/w342</item>
    <item name="image_url" type="string">http://image.tmdb.org/t/p/</item>

    <string-array name="movies_category">
        <item>Most Popular</item>
        <item>Highest Rated</item>
        <item>Favorites</item>
    </string-array>
</resources>
